public class Course {
    String name;

    public Course(String name) {
        this.name = name;
    }

    public void displayDetails() {
        System.out.println(this.name);
    }
}
