public class Instructor {
    String name;

    public Instructor(String name) {
        this.name = name;
    }

    public void displayDetails() {
        System.out.println(this.name);
    }
}
